kube/basic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: buildspace-nft-course-starter-basic-ingress
spec:
  defaultBackend:
    service:
      name: buildspace-nft-course-starter-service
      port:
        number: 8080
